--- a/app/src/main/res/layout/acttivity_main.xml
+++ b/app/src/main/res/layout/acttivity_main.xml
@@ -21,10 +21,22 @@
         android:textColor="@color/purple_500"/>
 
     <Button
+        android:id="@+id/DialHelplinenational"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="NATIONAL HELPLINE NUMBER" />
+
+    <Button
         android:id="@+id/DialHelpline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="HELPLINE NUMBER" />
+        android:text="COVID-19 HELPLINE NUMBER" />
+
+    <Button
+        android:id="@+id/WHO_WEBSITE"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="WHO WEBSITE" />
 
     <Button
         android:id="@+id/covidtracker"
@@ -33,17 +45,16 @@
         android:text="COVID TRACKER" />
 
     <Button
-        android:id="@+id/vaccination_schedule"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="SCHEDULE YOUR VACCINE" />
-
-    <Button
         android:id="@+id/details_of_vaccine"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="VACCINE DETAILS" />
 
+    <Button
+        android:id="@+id/vaccination_schedule"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="SCHEDULE YOUR VACCINE" />
 
 
 </LinearLayout>
