Signup Activity modi

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/sourcecode"
+        android:fontFamily="@font/poppinsbold"
         android:gravity="center"
         android:text="@string/login"
         android:textColor="@color/purple_500"
