--- a/app/src/main/res/layout/acttivity_main.xml
+++ b/app/src/main/res/layout/acttivity_main.xml
@@ -21,43 +21,45 @@
         android:textColor="@color/purple_500"/>
 
     <Button
-        android:id="@+id/DialHelplinenational"
+        android:id="@+id/vaccination_schedule"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="NATIONAL HELPLINE NUMBER"
-        android:textStyle="bold"
-        android:fontFamily="@font/poppinsbold"/>
-
-    <Button
-        android:id="@+id/DialHelpline"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="COVID-19 HELPLINE NUMBER"
-        android:fontFamily="@font/poppinsbold"/>
-
-    <Button
-        android:id="@+id/WHO_WEBSITE"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="WHO WEBSITE" />
-
-    <Button
-        android:id="@+id/covidtracker"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="COVID TRACKER" />
+        android:layout_marginBottom="15sp"
+        android:text="@string/schedule_vaccine" />
 
     <Button
         android:id="@+id/details_of_vaccine"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="VACCINE DETAILS" />
+        android:layout_marginBottom="15sp"
+        android:text="@string/know_vaccine" />
 
     <Button
-        android:id="@+id/vaccination_schedule"
+        android:id="@+id/covidtracker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="SCHEDULE YOUR VACCINE" />
+        android:layout_marginBottom="200sp"
+        android:text="@string/worldometer" />
 
+    <Button
+        android:id="@+id/DialHelplinenational"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/poppinsbold"
+        android:text="@string/helpline"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/DialHelpline"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/poppinsbold"
+        android:text="@string/dial_helpline" />
+
+    <Button
+        android:id="@+id/WHO_WEBSITE"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/who" />
 
 </LinearLayout>
