--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -126,7 +126,7 @@
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="20dp"
             android:text="@string/signup"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
@@ -137,8 +137,8 @@
             android:id="@+id/loginText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:fontFamily="@font/poppinsmedium"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/poppinsbold"
             android:text="@string/loginhere"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
@@ -148,11 +148,12 @@
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="393dp"
+            android:layout_width="350dp"
             android:layout_height="34dp"
             android:layout_marginTop="4dp"
             android:text="@string/password_must_be_combination_of_lower_upper_case_letters_and_digits"
-            android:textColor="#FFFFFF"
+            android:textAlignment="center"
+            android:textColor="#000000"
             android:textSize="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
